--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title:            Causalité
 tagline:          Causal Inference, Causality, Machine Learning
 description:      'A Reading Group in Causal Inference'
 url:              https://causalite.ml
-baseurl:          /
+baseurl:          ''
 paginate:         20
 paginate_path:    "/blog/page:num/"
 
